[gd_scene load_steps=5 format=2]

[ext_resource path="res://AlgorithmScenes/Screen/popup_for_object_creation.gd" type="Script" id=1]
[ext_resource path="res://AlgorithmScenes/Screen/PopupTheme.tres" type="Theme" id=2]
[ext_resource path="res://AlgorithmScenes/Screen/ErrorInPopupTheme.tres" type="Theme" id=3]

[sub_resource type="Animation" id=1]
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.6, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}

[node name="PopUpForObjectCreation" type="WindowDialog"]
visible = true
margin_left = 512.0
margin_top = 232.0
margin_right = 1024.0
margin_bottom = 456.0
focus_neighbour_top = NodePath("EnterButton")
focus_neighbour_bottom = NodePath("NameAssign")
focus_next = NodePath("NameAssign")
focus_previous = NodePath("EnterButton")
input_pass_on_modal_close_click = false
theme = ExtResource( 2 )
popup_exclusive = true
window_title = "Assign name to Data Structure"
script = ExtResource( 1 )

[node name="Explanation" type="Label" parent="."]
margin_left = 5.544
margin_top = 13.0
margin_right = 506.544
margin_bottom = 39.0
rect_pivot_offset = Vector2( 265.108, 0 )
size_flags_horizontal = 3
text = "You are about to create a Queue, please, specify its name"
align = 1
autowrap = true

[node name="ErrorNotification" type="Label" parent="."]
visible = false
margin_left = 8.0
margin_top = 112.0
margin_right = 509.0
margin_bottom = 152.0
rect_pivot_offset = Vector2( 265.108, 0 )
size_flags_horizontal = 3
theme = ExtResource( 3 )
custom_constants/shadow_as_outline = 2
text = "Invalid name for variable"
align = 1
autowrap = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="ErrorNotification"]
anims/message_modulation = SubResource( 1 )

[node name="NameAssign" type="LineEdit" parent="."]
margin_left = 40.0
margin_top = 40.0
margin_right = 456.0
margin_bottom = 96.0
focus_neighbour_right = NodePath("..")
focus_neighbour_bottom = NodePath("../EnterButton")
focus_next = NodePath("../EnterButton")
focus_previous = NodePath("..")
input_pass_on_modal_close_click = false
align = 1
placeholder_text = "Variable/Object name..."
caret_blink = true

[node name="EnterButton" type="Button" parent="."]
modulate = Color( 0.121569, 0.913725, 0, 1 )
margin_left = 192.0
margin_top = 168.0
margin_right = 318.0
margin_bottom = 203.0
focus_neighbour_top = NodePath("../NameAssign")
focus_neighbour_bottom = NodePath("..")
focus_next = NodePath("..")
focus_previous = NodePath("../NameAssign")
text = "Enter"

[connection signal="animation_finished" from="ErrorNotification/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="text_entered" from="NameAssign" to="." method="_on_NameAssign_text_entered"]
[connection signal="pressed" from="EnterButton" to="." method="_on_EnterButton_pressed"]
